[gd_scene load_steps=3 format=2]

[ext_resource path="res://HelperEntities/PointIndication.tscn" type="PackedScene" id=1]
[ext_resource path="res://HelperEntities/OrbitalCamera.gd" type="Script" id=2]


[node name="OrbitalCamera" type="Spatial"]
script = ExtResource( 2 )

[node name="PointIndication" parent="." instance=ExtResource( 1 )]

[node name="CameraHolderY" type="Spatial" parent="."]

[node name="ComeraHolderX" type="Spatial" parent="CameraHolderY"]

[node name="Camera" type="Camera" parent="CameraHolderY/ComeraHolderX"]
transform = Transform( -1.62921e-07, 0, 1, 0, 1, 0, -1, 0, -1.62921e-07, 4.26192, 0, -0.00301409 )
far = 400.0

[node name="TopViewCamera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, 1, 0, -1, -1.62921e-07, 0, 18, 0 )
